add_library(core OBJECT
        aligned_buffer.hh
        align.hh
        apply.hh
        app-template.cc
        app-template.hh
        array_map.hh
        bitops.hh
        bitset-iter.hh
        byteorder.hh
        cacheline.hh
        checked_ptr.hh
        chunked_fifo.hh
        circular_buffer_fixed_capacity.hh
        circular_buffer.hh
        CMakeLists.txt
        condition-variable.hh
        deleter.hh
        distributed.hh
        do_with.hh
        dpdk_rte.cc
        dpdk_rte.hh
        enum.hh
        exception_hacks.cc
        exception_hacks.hh
        execution_stage.hh
        expiring_fifo.hh
        fair_queue.hh
        file.hh
        file-impl.hh
        fsqual.cc
        fsqual.hh
        fstream.cc
        fstream.hh
        function_traits.hh
        future.hh
        future-util.hh
        gate.hh
        iostream.hh
        iostream-impl.hh
        lowres_clock.hh
        manual_clock.hh
        memory.cc
        memory.hh
        metrics_api.hh
        metrics.cc
        metrics.hh
        metrics_registration.hh
        metrics_types.hh
        pipe.hh
        posix.cc
        posix.hh
        preempt.hh
        prefetch.hh
        print.hh
        prometheus.cc
        prometheus.hh
        queue.hh
        ragel.hh
        reactor.cc
        reactor.hh
        report_exception.hh
        resource.cc
        resource.hh
        rwlock.hh
        scattered_message.hh
        scheduling.hh
        scollectd_api.hh
        scollectd.cc
        scollectd.hh
        scollectd-impl.hh
        seastar.hh
        semaphore.hh
        sharded.hh
        shared_future.hh
        shared_mutex.hh
        shared_ptr_debug_helper.hh
        shared_ptr.hh
        shared_ptr_incomplete.hh
        simple-stream.hh
        slab.hh
        sleep.hh
        sstring.hh
        stream.hh
        systemwide_memory_barrier.cc
        systemwide_memory_barrier.hh
        task.hh
        temporary_buffer.hh
        thread.cc
        thread.hh
        thread_impl.hh
        timer.hh
        timer-set.hh
        transfer.hh
        unaligned.hh
        units.hh
        vector-data-sink.hh
        vla.hh
        weak_ptr.hh)

add_definitions(-DDEFAULT_ALLOCATOR)